--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
   <meta charset=UTF-8>
   <title>Eddie Samuels</title>
-  <link rel="stylesheet" href="/css/base.css" type="text/css">
+  <link rel="stylesheet" href="base.css" type="text/css">
   <!--[if IE]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
