--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
   <meta charset=UTF-8>
   <title>Eddie Samuels</title>
-  <link rel="stylesheet" href="base.css" type="text/css">
+  <link rel="stylesheet" href="css/base.css" type="text/css">
   <!--[if IE]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
@@ -24,7 +24,7 @@
               <p>Come back soon for updates!</p>
         <figure>
         
-          <img src="/index/images/IMG_2662.jpg" alt="Img 2662" />
+          <img src="tummy.jpg" />
         
         </figure>
 
