--- a/index.html
+++ b/index.html
@@ -9,24 +9,19 @@
   <![endif]-->
   </head>
   <body id="index">
+    <div id="revisit">Come back soon for updates!</div>
     <section id="wrapper">
       <header>
-        <h1 id="logo"><a href="/" rel="home">Eddie Samuels</a></h1>
+        <h1 id="headline">Eddie Samuels</h1>
+        <img id="logo" src="tummy.png" height="150"></img>
       </header>
-<nav>
-  <ol>
-      <li><a class="email" href="mailto: eddiemsamuels@gmail.com">contact</a></li>
-      <li><a class="resume" href="/resume.pdf">resume</a></li>
-      <li><a href="http://www.twitter.com/edsammy">@edsammy</a></li>
-  </ol>
-</nav>
-    
-      <article>
-              <p>Come back soon for updates!</p>
-
-
-      </article>
-      
+      <nav>
+        <ol>
+          <li><a class="email" href="mailto:eddiemsamuels@gmail.com">contact</a></li>
+          <li><a class="resume" href="/resume.pdf">resume</a></li>
+          <li><a href="http://www.twitter.com/edsammy">@edsammy</a></li>
+        </ol>
+      </nav>
     </section>
   </body>
 </html>
