--- a/wipow/index.html
+++ b/wipow/index.html
@@ -2,6 +2,6 @@
 <html lang="en">
   <head>
   <meta charset=UTF-8>
-  <meta name='commands' content="111111111111111111111111000000000000000000000000000000000">
+  <meta name="commands" content="111111111111111111111111000000000000000000000000000000000">
   </head>
 </html>
