--- a/wipow/index.html
+++ b/wipow/index.html
@@ -1,2 +1,67 @@
-111111111111111111111111000000000000000000000000000000000
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
+    <script src="/script.js"></script>
+  </head>
+  <body>
+    <input type="checkbox" id="check1" class="someclass">
+    <input type="checkbox" id="check2" class="someclass">
+    <input type="checkbox" id="check3" class="someclass">
+    <input type="checkbox" id="check4" class="someclass">
+    <input type="checkbox" id="check5" class="someclass">
+    <input type="checkbox" id="check6" class="someclass">
+    <input type="checkbox" id="check7" class="someclass">
+    <input type="checkbox" id="check8" class="someclass">
+    <input type="checkbox" id="check9" class="someclass">
+    <input type="checkbox" id="check10" class="someclass">
+    <input type="checkbox" id="check11" class="someclass">
+    <input type="checkbox" id="check12" class="someclass">
+    <input type="checkbox" id="check13" class="someclass">
+    <input type="checkbox" id="check14" class="someclass">
+    <input type="checkbox" id="check15" class="someclass">
+    <input type="checkbox" id="check16" class="someclass">
+    <input type="checkbox" id="check17" class="someclass">
+    <input type="checkbox" id="check18" class="someclass">
+    <input type="checkbox" id="check19" class="someclass">
+    <input type="checkbox" id="check20" class="someclass">
+    <input type="checkbox" id="check21" class="someclass">
+    <input type="checkbox" id="check22" class="someclass">
+    <input type="checkbox" id="check23" class="someclass">
+    <input type="checkbox" id="check24" class="someclass">
+    <input type="checkbox" id="check25" class="someclass">
+    <input type="checkbox" id="check26" class="someclass">
+    <input type="checkbox" id="check27" class="someclass">
+    <input type="checkbox" id="check28" class="someclass">
+    <input type="checkbox" id="check29" class="someclass">
+    <input type="checkbox" id="check30" class="someclass">
+    <input type="checkbox" id="check31" class="someclass">
+    <input type="checkbox" id="check32" class="someclass">
+    <input type="checkbox" id="check33" class="someclass">
+    <input type="checkbox" id="check34" class="someclass">
+    <input type="checkbox" id="check35" class="someclass">
+    <input type="checkbox" id="check36" class="someclass">
+    <input type="checkbox" id="check37" class="someclass">
+    <input type="checkbox" id="check38" class="someclass">
+    <input type="checkbox" id="check39" class="someclass">
+    <input type="checkbox" id="check40" class="someclass">
+    <input type="checkbox" id="check41" class="someclass">
+    <input type="checkbox" id="check42" class="someclass">
+    <input type="checkbox" id="check43" class="someclass">
+    <input type="checkbox" id="check44" class="someclass">
+    <input type="checkbox" id="check45" class="someclass">
+    <input type="checkbox" id="check46" class="someclass">
+    <input type="checkbox" id="check47" class="someclass">
+    <input type="checkbox" id="check48" class="someclass">
+    <input type="checkbox" id="check49" class="someclass">
+    <input type="checkbox" id="check50" class="someclass">
+    <input type="checkbox" id="check51" class="someclass">
+    <input type="checkbox" id="check52" class="someclass">
+    <input type="checkbox" id="check53" class="someclass">
+    <input type="checkbox" id="check54" class="someclass">
+    <input type="checkbox" id="check55" class="someclass">
+    <input type="checkbox" id="check56" class="someclass">
+    <input id="btn" type="button" value="Get checked ids" />
+    <div id="checkStates"></div>
+  </body>
+</html>
