--- a/wipow/index.html
+++ b/wipow/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
   </head>
   <body>
     <input type="checkbox" id="check1" class="someclass">
