--- a/wipow/index.html
+++ b/wipow/index.html
@@ -62,6 +62,6 @@
     <input type="checkbox" id="check55" class="someclass">
     <input type="checkbox" id="check56" class="someclass">
     <input id="btn" type="button" value="Get checked ids" />
-    <div id="checkStates"></div>
+    <div id="checkStates">111111111111111111111111111111111111111111111111111111111</div>
   </body>
 </html>
