updated for summer

--- a/index/index.html
+++ b/index/index.html
@@ -39,7 +39,7 @@
 
 <p>In my free time I enjoy doing <a href='http://blogs.rochester.edu/ibtl/'>improv</a> and designing <a href='/shirts'>t-shirts</a>.</p>
 
-<p>I am currently looking for an internship for Summer 2013.</p>
+<p>For the summer, I am working on a <a href='http://www.ece.rochester.edu/projects/wcng/project_smartgrid.html'>wireless power monitoring device</a>.</p>
 
 <p>Here&#8217;s my <a href='/resume.pdf'>resume</a>.</p>
 		    </section>
