update current work status

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 <p>In my free time I enjoy doing <a href='http://blogs.rochester.edu/ibtl/'>improv</a> and designing <a href='/shirts'>t-shirts</a>.</p>
 
-<p>I am looking for an internship for summer 2014.</p>
+<p>I am current working at Lockheed Martin through the <a href='http://astrosun2.astro.cornell.edu/specialprograms/spacegrant/'>New York Space Grant Program</a></p>
 
 <p>Here&#8217;s my <a href='/resume.pdf'>resume</a>.</p>
 		    </section>
