--- a/projects/underwater rover/index.html
+++ b/projects/underwater rover/index.html
@@ -33,19 +33,21 @@
   	  <article>
   	  	<h2>underwater rover</h2>
         <section role="main">
-		      <p><em>summer 2014</em></p>
+		      
+<p><em>summer 2014</em></p>
 
-<p>This is an underwater rover that was developed at Lockheed Martin as a prototype for the <a href='http://www.ourshadesofblue.org/documents/lockheedmartinengineeringexplorerspost.pdf'>Engineering Explorers Post program</a>.</p>
+<p>This is an underwater rover that was developed at Lockheed Martin as a prototype for the <a href="http://www.ourshadesofblue.org/documents/lockheedmartinengineeringexplorerspost.pdf">Engineering Explorers Post program</a>.</p>
 
 <p>The rover is propelled by 3 bilge pumps, 2 on the sides for forward jetting and 1 mounted underneath with a propellor for up and down movement. An Arduino Pro Mini receives serial commands through an XBee radio which floats on top of the water in a tethered buoy (because wireless signals cannot be transmitted through water). The side bilge pump motors are controlled through 2 MOSFETs while the motor underneath is controlled through a L298 H-bridge. Speed is regulated with PWM signals from the Arduino.</p>
 
-<p>On the front of the rover is a clear acrylic dome and a small camera which streams wireless video to the rover operator. The wireless video transmitter is also housed in the buoy to allow for proper transmission. The camera is mounted on a servo which allows the operator to tilt the view up and down using a joystick on the controller. Data from sensors mounted in and around the rover are overlayed with the video feed using a <a href='http://nootropicdesign.com/ve/'>video experimenter shield</a>. There are waterproof LEDs mounted to the body of the rover in order to see underwater.</p>
+<p>On the front of the rover is a clear acrylic dome and a small camera which streams wireless video to the rover operator. The wireless video transmitter is also housed in the buoy to allow for proper transmission. The camera is mounted on a servo which allows the operator to tilt the view up and down using a joystick on the controller. Data from sensors mounted in and around the rover are overlayed with the video feed using a <a href="http://nootropicdesign.com/ve/">video experimenter shield</a>. There are waterproof LEDs mounted to the body of the rover in order to see underwater.</p>
 
 <p>The rover is powered by a 3 cell LiPo battery which is also housed in the buoy. Power lines are run through the tether along with the communication line (Ethernet cable).</p>
 
 <p>Check out the rover schematic and Arduino code below!</p>
 
-<p>This project was funded by the <a href='http://astrosun2.astro.cornell.edu/specialprograms/spacegrant/'>New York NASA Space Grant Consortium</a>. Created with Matt Churchman and Matthew Liu.</p>
+<p>This project was funded by the <a href="http://astrosun2.astro.cornell.edu/specialprograms/spacegrant/">New York NASA Space Grant Consortium</a>. Created with Matt Churchman and Matthew Liu.</p>
+
 		    </section>
 
         <figure>
