--- a/shirts/hhsrc/index.html
+++ b/shirts/hhsrc/index.html
@@ -39,8 +39,10 @@
 
   	  	<h2>Hillsborough High School **Men's Rowing Club**</h2>
         <section role="main">
-		      <p><strong>Hillsborough High School Men&#8217;s Rowing Club</strong></p>
+		      
+<p><strong>Hillsborough High School Men’s Rowing Club</strong></p>
 
 <p>2010</p>
+
 		    </section>
       </article>
