--- a/shirts/otb10/index.html
+++ b/shirts/otb10/index.html
@@ -41,10 +41,12 @@
 
   	  	<h2>On The Brink</h2>
         <section role="main">
-		      <p><strong>On The Brink presents: The Sound of Music</strong></p>
+		      
+<p><strong>On The Brink presents: The Sound of Music</strong></p>
 
-<p>Designed with: Taylor Gonzalez, Dylan Rigsby, and Adrian Jimenez</p>
+<p>Designed with: Taylor Gonzalez, Dylan Rigsby, &amp; Adrian Jimenez</p>
 
 <p>2010</p>
+
 		    </section>
       </article>
