updating supporting files

--- a/index.html
+++ b/index.html
@@ -34,15 +34,9 @@
 	      <h2></h2>
 		    <section role="main" class="main">
 		      
-<p>Hello! I am a student at the <a href="http://www.rochester.edu/">University of Rochester</a> studying Electrical Engineering.</p>
+<p>Hello! Here are some <a href="/projects">things</a> I’ve made and here’s my <a href="/resume.pdf">resume</a>.</p>
 
-<p>Here are some <a href="/projects">things</a> I’ve made.</p>
-
-<p>In my free time I enjoy doing <a href="http://blogs.rochester.edu/ibtl/">improv</a> and designing <a href="/shirts">t-shirts</a>.</p>
-
-<p>I am looking for full time employment after May 2015.</p>
-
-<p>Here’s my <a href="/resume.pdf">resume</a>.</p>
+<p>Thanks for stopping by!</p>
 
 		    </section>
         <figure>
@@ -53,7 +47,7 @@
 	    </article>
 	
       <footer>  
-  <p>Built with <a href="http://www.tinytree.info">Bonsai</a>. © Eddie Samuels, 2014 - <a href="mailto:eddiemsamuels@gmail.com">eddiemsamuels@gmail.com</a></p>
+  <p>Built with <a href="http://www.tinytree.info">Bonsai</a>. © Eddie Samuels, 2015 - <a href="mailto:eddiemsamuels@gmail.com">eddiemsamuels@gmail.com</a></p>
 </footer>
     </section>
     <script type="text/javascript">
