--- a/projects/wireless power monitor/index.html
+++ b/projects/wireless power monitor/index.html
@@ -25,7 +25,7 @@
 
       <li><a href="/projects">projects</a></li>
       <li><a href="/shirts">shirts</a></li>
-      <li><a href="/resume">resume</a></li>
+      <li><a href="/resume.pdf">resume</a></li>
   </ul>
 </div>
 
