--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	      <h2></h2>
 		    <section role="main" class="main">
 		      
-<p>Hello! Here are some <a href="/projects">things</a> I’ve made and here’s my <a href="/resume/resume.pdf">resume</a>.</p>
+<p>Hello! Here are some <a href="/projects">things</a> I’ve made and here’s my <a href="/resume.pdf">resume</a>.</p>
 
 <p>Thanks for stopping by!</p>
 
