--- a/projects/spinning-grad-cap/index.html
+++ b/projects/spinning-grad-cap/index.html
@@ -3,8 +3,8 @@
   <head>
   <meta charset=UTF-8>
   <title>Eddie Samuels</title>
-  <link rel="stylesheet" href="/css/bootstrap.min.css" type="text/css">
-  <link rel="stylesheet" href="/css/base.css" type="text/css">
+  <link rel="stylesheet" href="./css/bootstrap.min.css" type="text/css">
+  <link rel="stylesheet" href="./css/base.css" type="text/css">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
   <link href='http://fonts.googleapis.com/css?family=Cutive+Mono' rel='stylesheet' type='text/css'>
   <script src="/js/bootstrap.min.js"></script>
@@ -99,7 +99,7 @@
       </ul>
 
       <footer>  
-  <p>Built with <a href="http://www.tinytree.info">Bonsai</a>. © Eddie Samuels, 2015 - <a href="mailto:eddiemsamuels@gmail.com">eddiemsamuels@gmail.com</a></p>
+  <p>Built with <a href="http://www.tinytree.info">Bonsai</a> by me</p>
 </footer>
     </section>
   </body>
