index resume link was off

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <p><strong><em>Currently:</em></strong> <strong>looking for new oppoutunities in San Diego</strong></p>
 
-<p>Check out my <a href="/resume/resume.pdf">resume</a></p>
+<p>Check out my <a href="/resume.pdf">resume</a></p>
 
 <p>Thanks for stopping by!</p>
 
