--- a/resume/resume.html
+++ b/resume/resume.html
@@ -32,6 +32,9 @@
                                 <p><i class="fa fa-map-marker-alt" title="Location"></i> San Diego, CA</p>
                             </li>
                             <li>
+                                <p><i class="fa fa-phone" title="Cell"></i>(813)-943-6549</p>
+                            </li>
+                            <li>
                                 <p><i class="fa fa-envelope" title="Email"></i> <a id="email" href="mailto:eddiemsamuels@gmail.com" target="_blank">eddiemsamuels@gmail.com</a></p>
                             </li>
                             <li>
@@ -66,6 +69,12 @@
                             <li><span>Git</span></li>
                             <li><span>Bash</span></li>
                         </ul>
+                        <h6 id="newed">EDUCATION</h6>
+                        <p class="company">University of Rochester</p>
+                        <div>
+                            <div id="BS">B.S. in Electrical &amp; Computer Engineering</div>
+                            <div id="sidetime">2011 – 2015</div>
+                        </div>
                     </section>
                 </aside>
                 <section>
@@ -78,10 +87,22 @@
                             <h6>EXPERIENCE</h6>
                             <ol>
                                 <li>
+                                    <p class="company">Studlabs Consulting</p>
+                                    <div class="title">
+                                        <p>Principal Engineer</p>
+                                        <time>Mar 2020 – Present</time>
+                                    </div>
+                                    <ul>
+                                        <li>Outlined system architecture for dash camera based on the RK3399 processor</li>
+                                        <li>Designed and prototyped cryptographic point of sale device</li>
+                                        <li>Fabricated <a href="https://vimeo.com/92248339">LED paint rollers</a> for meuseum exhibit</li>
+                                        <li>Schematic capture, PCB routing, and firmware development for proteomics motion controller</li>
+                                        <li>Supported system integration of solar charging station for mobile school platform</li>
+                                    </ul>
                                     <p class="company">comma.ai</p>
                                     <div class="title">
                                         <p>VP of Hardware</p>
-                                        <time>2018 – 2019</time>
+                                        <time>Jan 2018 – Jul 2019</time>
                                     </div>
                                     <ul>
                                         <li>Managed a four person hardware team</li>
@@ -93,7 +114,7 @@
 
                                     <div class="title">
                                         <p>Hardware Engineer</p>
-                                        <time>2016 – 2018
+                                        <time>Jun 2016 – Jan 2018
                                     </div>
                                     <ul>
                                         <li>First hardware hire for the company</li>
@@ -108,14 +129,14 @@
                                     <p class="company">Lockheed Martin</p>
                                     <div class="title">
                                         <p>Associate Electrical Engineer</p>
-                                        <time>2015 – 2016</time>
+                                        <time>Jun 2015 – Jun 2016</time>
                                     </div>
                                     <ul>
                                         <li>Performed PCB bringup, documentation, and system integration for Joint Strike Fighter test equipment</li>
                                         <li>Developed MATLAB automated test platform to search for spurious RF emission events</li>
                                     </ul>
 
-                                    <div class="title">
+<!--                                     <div class="title">
                                         <p>Electrical Engineer Intern</p>
                                         <time>Summer 2014</time>
                                     </div>
@@ -123,12 +144,12 @@
                                         <li>Part of a three member team chosen by Lockheed Martin and the New York NASA Space Grant Consortium</li>
                                         <li>Designed electrical platform for a teleoperated <a href="https://eddiesamuels.com/projects/underwater%20rover/" target="_blank">underwater rover</a> <br></li>
                                         <li>Developed curriculum for STEM outreach program based on rover design</li>
-                                    </ul>
+                                    </ul> -->
                                 </li>
                             </ol>
                         </section>
                         <section class="education">
-                            <h6>EDUCATION</h6>
+                            <!-- <h6>EDUCATION</h6>
                             <ol>
                                 <li>
                                     <p class="company">University of Rochester</p>
@@ -137,7 +158,7 @@
                                         <time>2011 – 2015</time>
                                     </div>
                                 </li>
-                            </ol>
+                            </ol> -->
                         </section>
                     </section>
                 </section>
