--- a/resume/resume.html
+++ b/resume/resume.html
@@ -89,8 +89,8 @@
                                 <li>
                                     <p class="company">Studlabs Consulting</p>
                                     <div class="title">
-                                        <p>Principal Engineer</p>
-                                        <time>Mar 2020 – Present</time>
+                                        <p>Owner/Engineer</p>
+                                        <time>August 2019 – Present</time>
                                     </div>
                                     <ul>
                                         <li>Outlined system architecture for dash camera based on the RK3399 processor</li>
@@ -101,8 +101,8 @@
                                     </ul>
                                     <p class="company">comma.ai</p>
                                     <div class="title">
-                                        <p>VP of Hardware</p>
-                                        <time>Jan 2018 – Jul 2019</time>
+                                        <p>Principal Hardware Engineer</p>
+                                        <time>January 2018 – July 2019</time>
                                     </div>
                                     <ul>
                                         <li>Managed a four person hardware team</li>
@@ -114,7 +114,7 @@
 
                                     <div class="title">
                                         <p>Hardware Engineer</p>
-                                        <time>Jun 2016 – Jan 2018
+                                        <time>June 2016 – January 2018
                                     </div>
                                     <ul>
                                         <li>First hardware hire for the company</li>
@@ -129,7 +129,7 @@
                                     <p class="company">Lockheed Martin</p>
                                     <div class="title">
                                         <p>Associate Electrical Engineer</p>
-                                        <time>Jun 2015 – Jun 2016</time>
+                                        <time>June 2015 – June 2016</time>
                                     </div>
                                     <ul>
                                         <li>Performed PCB bringup, documentation, and system integration for Joint Strike Fighter test equipment</li>
